# c-scratch

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  collect_npm_zip.sh  config.h  motion.cpp  motion.h  scripts.cpp  scripts.h  scripts_common.h  source.cpp  sprites.h  sprites_common.h  unique_generator.h
.github/workflows/: deploy-runtime-zip.yml
docs/: about_stage.md  project_structure.md  scratch_functionality.md
keynames_hashing/: config.gperf  gen_map.js  keymap.json  readme.md  sdl_scancodes.h
runtime/: CMakeLists.txt  actions.h  array.h  backdrop.h  control_flow.h  coroutines.h  debug.cpp  debug.h  files.cpp  files.h  include_sdl.h  math.h  messages.h  mutex.h  pen.cpp  pen.h  script_manager.cpp  script_manager.h  script_utils.cpp  script_utils.h  sdl.cpp  sdl.h  sdl_scancodes.h  sprite.cpp  sprite.h  sprite_base.h  sprite_manager.cpp  sprite_manager.h  sprite_utils.cpp  sprite_utils.h  string.cpp  string.h  string_utils.h  thread.h  time.cpp  time.h  ts_container.h  ts_queue.h  ts_synchronizer.h  utils.cpp  (+3 more)
runtime/math/: CMakeLists.txt  common.h  const.h  exp.h  math.h  number_type.h  rand.h  sign.h  sin_cos.cpp  sin_cos.h  trig.cpp  trig.h
runtime/math/fast/: CMakeLists.txt  inc.h  sin_cos.cpp
runtime/math/precise/: CMakeLists.txt  __cos.cpp  __rem_pio2.cpp  __rem_pio2_large.cpp  __sin.cpp  cos.cpp  inc.h  sin.cpp
runtime/pen/: CMakeLists.txt  _fig.cpp  _fig.h  _lines.cpp  _lines.h  _pixel.cpp  _pixel.h  _safe_block.h  _stamp.cpp  _stamp.h  pen.cpp  pen.h
runtime/script/: CMakeLists.txt  actions.h  messages.h  script_manager.cpp  script_manager.h  scripts_base.h  scripts_common.h  should_run.c  should_run.h
runtime/sdl_gfx/: CMakeLists.txt  SDL2_framerate.h  SDL2_gfxPrimitives.c  SDL2_rotozoom.h
runtime/sprite/: CMakeLists.txt  backdrop.h  sprite.h  sprite_base.h  sprite_manager.cpp  sprite_manager.h  sprites_common.h
runtime/string/: CMakeLists.txt  _bmh_search.cpp  _bmh_search.h  _operations.h  _str_to_num.h  string.h  string_utils.h
runtime/string_utils/: CMakeLists.txt  _bmh_search.h  _operations.h  string_utils.h
stage/: scripts.h  sprites.h
stage/backdrop/: CMakeLists.txt  backdrop.h  scripts.h  sprite.h
stage/sprite/: scripts.h  sprite.h
stage/sprite2/: scripts.h  sprite.h
zip_npm_base/: package.json
